--- a/spread.yaml
+++ b/spread.yaml
@@ -856,6 +856,8 @@ suites:
             # Install the snapd built
             dpkg -i "$SPREAD_PATH"/../snapd_*.deb
         prepare-each: |
+            tests.backup prepare
+
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_prepare_env
@@ -864,6 +866,8 @@ suites:
             . "$TESTSLIB/nested.sh"
             nested_destroy_vm
             nested_cleanup_env
+
+            tests.backup restore
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
@@ -905,6 +909,8 @@ suites:
             nested_prepare_env
             nested_create_classic_vm
         prepare-each: |
+            tests.backup prepare
+
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_start_classic_vm
@@ -912,6 +918,8 @@ suites:
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_destroy_vm
+
+            tests.backup restore
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
@@ -953,6 +961,8 @@ suites:
             nested_prepare_env
             nested_create_core_vm
         prepare-each: |
+            tests.backup prepare
+
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_start_core_vm
@@ -961,6 +971,8 @@ suites:
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_destroy_vm
+
+            tests.backup restore
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
@@ -1003,8 +1015,19 @@ suites:
             . "$TESTSLIB/nested.sh"
             nested_prepare_env
             nested_create_core_vm
+        prepare-each: |
+            tests.backup prepare
+
+            #shellcheck source=tests/lib/nested.sh
+            . "$TESTSLIB/nested.sh"
             nested_start_core_vm
             nested_wait_for_snap_command
+        restore-each: |
+            #shellcheck source=tests/lib/nested.sh
+            . "$TESTSLIB/nested.sh"
+            nested_destroy_vm
+
+            tests.backup restore
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
