--- a/tests/regression/lp-1898038/task.yaml
+++ b/tests/regression/lp-1898038/task.yaml
@@ -13,8 +13,8 @@ execute: |
     # wait a bit to ensure the mount namespace exists
     sleep 5
     # check that within the snap mount namespace /etc/apparmor is mounted
-    test $(nsenter -m/run/snapd/ns/test-docker-support-app.mnt mount | grep /etc/apparmor | wc -l) -eq 2
-    test $(nsenter -m/run/snapd/ns/test-multipass-support-app.mnt mount | grep /etc/apparmor | wc -l) -eq 2
+    test "$(nsenter -m/run/snapd/ns/test-docker-support-app.mnt mount | grep -c /etc/apparmor)" -eq 2
+    test "$(nsenter -m/run/snapd/ns/test-multipass-support-app.mnt mount | grep -c /etc/apparmor)" -eq 2
 restore: |
     tests.cleanup restore
 
