tests/regression/lp-1898038/task.yaml: Fix test to pass on UC16/18
On Ubuntu Core 16/18 /etc/apparmor.d/cache is mounted from the hostfs so we
need to be more specific when checking for /etc/apparmor when looking at
the output from `mount` within the snap's mount namespace.

Also add an additional check to the test to ensure that the snaps have
correctly loaded their apparmor profiles to ensure apparmor_parser is
working correctly.

--- a/tests/regression/lp-1898038/task.yaml
+++ b/tests/regression/lp-1898038/task.yaml
@@ -13,8 +13,11 @@ execute: |
     # wait a bit to ensure the mount namespace exists
     sleep 5
     # check that within the snap mount namespace /etc/apparmor is mounted
-    test "$(nsenter -m/run/snapd/ns/test-docker-support-app.mnt mount | grep -c /etc/apparmor)" -eq 2
-    test "$(nsenter -m/run/snapd/ns/test-multipass-support-app.mnt mount | grep -c /etc/apparmor)" -eq 2
+    # and comes from a snap
+    test "$(nsenter -m/run/snapd/ns/test-docker-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
+    test "$(nsenter -m/run/snapd/ns/test-multipass-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
+    # also check the snaps loaded their apparmor profiles
+    test "$(aa-status | grep -c 'snap.test-\(docker\|multipass\)-support.app.test-\(docker\|multipass\)-support')" -eq 2
 restore: |
     tests.cleanup restore
 
