--- a/tests/regression/lp-1898038/task.yaml
+++ b/tests/regression/lp-1898038/task.yaml
@@ -1,33 +1,33 @@
 summary: docker-support and multipass-support should mount base /etc/apparmor.d
 prepare: |
     tests.cleanup prepare
-    snap pack test-docker-support-app
-    tests.cleanup defer rm -f test-docker-support-app_1_all.snap
-    snap install --dangerous ./test-docker-support-app_1_all.snap
-    tests.cleanup defer snap remove --purge test-docker-support-app
-    snap pack test-multipass-support-app
-    tests.cleanup defer rm -f test-multipass-support-app_1_all.snap
-    snap install --dangerous ./test-multipass-support-app_1_all.snap
-    tests.cleanup defer snap remove --purge test-multipass-support-app
+    snap pack test-snapd-docker-support-app
+    tests.cleanup defer rm -f test-snapd-docker-support-app_1_all.snap
+    snap install --dangerous ./test-snapd-docker-support-app_1_all.snap
+    tests.cleanup defer snap remove --purge test-snapd-docker-support-app
+    snap pack test-snapd-multipass-support-app
+    tests.cleanup defer rm -f test-snapd-multipass-support-app_1_all.snap
+    snap install --dangerous ./test-snapd-multipass-support-app_1_all.snap
+    tests.cleanup defer snap remove --purge test-snapd-multipass-support-app
 execute: |
-    ! aa-status | grep -q 'test-docker-support-test-profile'
-    snap connect test-docker-support-app:docker-support
+    ! aa-status | grep -q 'test-snapd-docker-support-test-profile'
+    snap connect test-snapd-docker-support-app:docker-support
     # check we can load a simple profile
-    test-docker-support-app.test-docker-support
+    test-snapd-docker-support-app.test-snapd-docker-support
     # check that within the snap mount namespace /etc/apparmor is mounted
     # and comes from a snap
-    test "$(nsenter -m/run/snapd/ns/test-docker-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
+    test "$(nsenter -m/run/snapd/ns/test-snapd-docker-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
     # check the profile got loaded
-    aa-status | grep -q 'test-docker-support-test-profile'
+    aa-status | grep -q 'test-snapd-docker-support-test-profile'
 
     # and do the same for multipass-support
-    ! aa-status | grep -q 'test-multipass-support-test-profile'
-    snap connect test-multipass-support-app:multipass-support
-    test-multipass-support-app.test-multipass-support
-    test "$(nsenter -m/run/snapd/ns/test-multipass-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
-    aa-status | grep -q 'test-multipass-support-test-profile'
+    ! aa-status | grep -q 'test-snapd-multipass-support-test-profile'
+    snap connect test-snapd-multipass-support-app:multipass-support
+    test-snapd-multipass-support-app.test-snapd-multipass-support
+    test "$(nsenter -m/run/snapd/ns/test-snapd-multipass-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
+    aa-status | grep -q 'test-snapd-multipass-support-test-profile'
 restore: |
-    apparmor_parser -R /snap/test-docker-support-app/current/test-docker-support.profile || true
-    apparmor_parser -R /snap/test-docker-support-app/current/test-multipass-support.profile || true
+    apparmor_parser -R /snap/test-snapd-docker-support-app/current/test-snapd-docker-support.profile || true
+    apparmor_parser -R /snap/test-snapd-multipass-support-app/current/test-snapd-multipass-support.profile || true
     tests.cleanup restore
 
