--- a/tests/regression/lp-1898038/task.yaml
+++ b/tests/regression/lp-1898038/task.yaml
@@ -10,7 +10,7 @@ prepare: |
     snap install --dangerous ./test-snapd-multipass-support-app_1_all.snap
     tests.cleanup defer snap remove --purge test-snapd-multipass-support-app
 execute: |
-    ! aa-status | grep -q 'test-snapd-docker-support-test-profile'
+    not aa-status | grep -q 'test-snapd-docker-support-test-profile'
     snap connect test-snapd-docker-support-app:docker-support
     # check we can load a simple profile
     test-snapd-docker-support-app.test-snapd-docker-support
@@ -21,7 +21,7 @@ execute: |
     aa-status | grep -q 'test-snapd-docker-support-test-profile'
 
     # and do the same for multipass-support
-    ! aa-status | grep -q 'test-snapd-multipass-support-test-profile'
+    not aa-status | grep -q 'test-snapd-multipass-support-test-profile'
     snap connect test-snapd-multipass-support-app:multipass-support
     test-snapd-multipass-support-app.test-snapd-multipass-support
     test "$(nsenter -m/run/snapd/ns/test-snapd-multipass-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
