--- a/tests/regression/lp-1898038/task.yaml
+++ b/tests/regression/lp-1898038/task.yaml
@@ -10,22 +10,22 @@ prepare: |
     snap install --dangerous ./test-snapd-multipass-support-app_1_all.snap
     tests.cleanup defer snap remove --purge test-snapd-multipass-support-app
 execute: |
-    aa-status | not grep -q 'test-snapd-docker-support-test-profile'
+    # use aa-status from the core snap since the host may not have it
+    /snap/core/current/usr/sbin/aa-status | not grep -q 'test-snapd-docker-support-test-profile'
     snap connect test-snapd-docker-support-app:docker-support
     # check we can load a simple profile
     test-snapd-docker-support-app.test-snapd-docker-support
     # check that within the snap mount namespace /etc/apparmor is mounted
     # and comes from a snap
     test "$(nsenter -m/run/snapd/ns/test-snapd-docker-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
-    # check the profile got loaded
-    aa-status | grep -q 'test-snapd-docker-support-test-profile'
+    /snap/core/current/usr/sbin/aa-status | grep -q 'test-snapd-docker-support-test-profile'
 
     # and do the same for multipass-support
-    aa-status | not grep -q 'test-snapd-multipass-support-test-profile'
+    /snap/core/current/usr/sbin/aa-status | not grep -q 'test-snapd-multipass-support-test-profile'
     snap connect test-snapd-multipass-support-app:multipass-support
     test-snapd-multipass-support-app.test-snapd-multipass-support
     test "$(nsenter -m/run/snapd/ns/test-snapd-multipass-support-app.mnt mount | grep -c '/etc/apparmor\(.d\)\? type squashfs')" -eq 2
-    aa-status | grep -q 'test-snapd-multipass-support-test-profile'
+    /snap/core/current/usr/sbin/aa-status | grep -q 'test-snapd-multipass-support-test-profile'
 restore: |
     apparmor_parser -R /snap/test-snapd-docker-support-app/current/test-snapd-docker-support.profile || true
     apparmor_parser -R /snap/test-snapd-multipass-support-app/current/test-snapd-multipass-support.profile || true
