--- a/tests/lib/tools/suite/system-state/task.yaml
+++ b/tests/lib/tools/suite/system-state/task.yaml
@@ -3,62 +3,56 @@ summary: smoke test for the system-state tool
 execute: |
 
     # Check help
-    "$TESTSTOOLS"/system-state | MATCH "usage: is-core"
-    "$TESTSTOOLS"/system-state -h | MATCH "usage: is-core"
-    "$TESTSTOOLS"/system-state --help | MATCH "usage: is-core"
+    os.query | MATCH "usage: is-core"
+    os.query -h | MATCH "usage: is-core"
+    os.query --help | MATCH "usage: is-core"
 
-    # check ubuntu core 16
-    if [[ "$SPREAD_SYSTEM" == ubuntu-core-16-* ]]; then
-        "$TESTSTOOLS"/system-state is-core
-        "$TESTSTOOLS"/system-state is-core-16
-        "$TESTSTOOLS"/system-state is-core-18 && exit 1
-        "$TESTSTOOLS"/system-state is-classic && exit 1
-
-    # check ubuntu core 18
-    elif [[ "$SPREAD_SYSTEM" == ubuntu-core-18-* ]]; then
-        "$TESTSTOOLS"/system-state is-core
-        "$TESTSTOOLS"/system-state is-core-18
-        "$TESTSTOOLS"/system-state is-core-20 && exit 1
-        "$TESTSTOOLS"/system-state is-classic && exit 1
-
-    # check ubuntu core 20
-    elif [[ "$SPREAD_SYSTEM" == ubuntu-core-20-* ]]; then
-        "$TESTSTOOLS"/system-state is-core
-        "$TESTSTOOLS"/system-state is-core-20
-        "$TESTSTOOLS"/system-state is-core-18 && exit 1
-        "$TESTSTOOLS"/system-state is-classic && exit 1
-
-    # check ubuntu trusty
-    elif [[ "$SPREAD_SYSTEM" == ubuntu-14-* ]]; then
-        "$TESTSTOOLS"/system-state is-classic
-        "$TESTSTOOLS"/system-state is-trusty
-        "$TESTSTOOLS"/system-state is-bionic && exit 1
-        "$TESTSTOOLS"/system-state is-core && exit 1
-
-    # check ubuntu xenial
-    elif [[ "$SPREAD_SYSTEM" == ubuntu-16-* ]]; then
-        "$TESTSTOOLS"/system-state is-classic
-        "$TESTSTOOLS"/system-state is-xenial
-        "$TESTSTOOLS"/system-state is-bionic && exit 1
-        "$TESTSTOOLS"/system-state is-core && exit 1
-
-    # check ubuntu bionic
-    elif [[ "$SPREAD_SYSTEM" == ubuntu-18-* ]]; then
-        "$TESTSTOOLS"/system-state is-classic
-        "$TESTSTOOLS"/system-state is-bionic
-        "$TESTSTOOLS"/system-state is-focal && exit 1
-        "$TESTSTOOLS"/system-state is-core && exit 1
-
-    # check ubuntu focal
-    elif [[ "$SPREAD_SYSTEM" == ubuntu-20.04-* ]]; then
-        "$TESTSTOOLS"/system-state is-classic
-        "$TESTSTOOLS"/system-state is-focal
-        "$TESTSTOOLS"/system-state is-xenial && exit 1
-        "$TESTSTOOLS"/system-state is-core && exit 1
-
-    # check other distributions
-    else
-        "$TESTSTOOLS"/system-state is-classic
-        "$TESTSTOOLS"/system-state is-focal && exit 1
-        "$TESTSTOOLS"/system-state is-core && exit 1
-    fi 
+    case "$SPREAD_SYSTEM" in
+        ubuntu-core-16-*)
+            os.query is-core
+            os.query is-core-16
+            os.query is-core-18 && exit 1
+            os.query is-classic && exit 1
+            ;;
+        ubuntu-core-18-*)
+            os.query is-core
+            os.query is-core-18
+            os.query is-core-20 && exit 1
+            os.query is-classic && exit 1
+            ;;
+        ubuntu-core-20-*)
+            os.query is-core
+            os.query is-core-20
+            os.query is-core-18 && exit 1
+            os.query is-classic && exit 1
+            ;;
+        ubuntu-14-*)
+            os.query is-classic
+            os.query is-trusty
+            os.query is-bionic && exit 1
+            os.query is-core && exit 1
+            ;;
+        ubuntu-16-*)
+            os.query is-classic
+            os.query is-xenial
+            os.query is-bionic && exit 1
+            os.query is-core && exit 1        
+            ;;
+        ubuntu-18-*)
+            os.query is-classic
+            os.query is-bionic
+            os.query is-focal && exit 1
+            os.query is-core && exit 1    
+            ;;
+        ubuntu-20.04-*)
+            os.query is-classic
+            os.query is-focal
+            os.query is-xenial && exit 1
+            os.query is-core && exit 1    
+            ;;
+        *)
+            os.query is-classic
+            os.query is-focal && exit 1
+            os.query is-core && exit 1
+            ;;
+    esac
