tests/regression/lp-1898038: Fix failing test on arch-linux-64
Run the snap and check for failure before trying to verify the state of the
snaps' mount namespace as this will create the mount namespace in the
process and also adds an extra check that the test behaves as expected.

--- a/tests/regression/lp-1898038/task.yaml
+++ b/tests/regression/lp-1898038/task.yaml
@@ -10,10 +10,14 @@ prepare: |
     snap install --dangerous ./test-snapd-multipass-support-app_1_all.snap
     tests.cleanup defer snap remove --purge test-snapd-multipass-support-app
 execute: |
+    # try running without the interface connected but should fail (this
+    # also has the effect of immediately creating the mount namespace too
+    # so the nsenter below should always work)
+    not test-snapd-docker-support-app.test-snapd-docker-support
     # use aa-status from the core snap since the host may not have it
     nsenter -m/run/snapd/ns/test-snapd-docker-support-app.mnt /usr/sbin/aa-status | not grep -q 'test-snapd-docker-support-test-profile'
+    # now connect it and verify profile can be loaded
     snap connect test-snapd-docker-support-app:docker-support
-    # check we can load a simple profile
     test-snapd-docker-support-app.test-snapd-docker-support
     # check that within the snap mount namespace /etc/apparmor is mounted
     # and comes from a snap
@@ -21,6 +25,7 @@ execute: |
     nsenter -m/run/snapd/ns/test-snapd-docker-support-app.mnt /usr/sbin/aa-status | grep -q 'test-snapd-docker-support-test-profile'
 
     # and do the same for multipass-support
+    not test-snapd-multipass-support-app.test-snapd-multipass-support
     nsenter -m/run/snapd/ns/test-snapd-multipass-support-app.mnt /usr/sbin/aa-status | not grep -q 'test-snapd-multipass-support-test-profile'
     snap connect test-snapd-multipass-support-app:multipass-support
     test-snapd-multipass-support-app.test-snapd-multipass-support
