tests/regression/lp-1898038: Don't try and run on ubuntu-14.04
There is no nsenter for trusty which is required by this test so don't try
and run there otherwise we will fail.

--- a/tests/regression/lp-1898038/task.yaml
+++ b/tests/regression/lp-1898038/task.yaml
@@ -1,4 +1,6 @@
 summary: docker-support and multipass-support should mount base /etc/apparmor.d
+# no nsenter on ubuntu-14.04
+systems: [-ubuntu-14.04-*]
 prepare: |
     tests.cleanup prepare
     snap pack test-snapd-docker-support-app
