--- a/tests/core/snap-set-core-config/task.yaml
+++ b/tests/core/snap-set-core-config/task.yaml
@@ -10,11 +10,8 @@ prepare: |
     if [ $rc = 4 ]; then
         # systemctl(1) exit code 4: no such unit
 
-        #shellcheck source=tests/lib/systemd.sh
-        . "$TESTSLIB"/systemd.sh
-
         # start fake rsyslog service
-        systemd_create_and_start_unit rsyslog "/bin/sleep 2h"
+        systemd-run --unit rsyslog /bin/sleep 2h
 
         # create a flag to indicate the ryslog service is fake
         touch rsyslog.fake
@@ -22,9 +19,7 @@ prepare: |
 
 restore: |
     if [ -f rsyslog.fake ]; then
-        #shellcheck source=tests/lib/systemd.sh
-        . "$TESTSLIB"/systemd.sh
-        systemd_stop_and_destroy_unit rsyslog
+        systemctl stop rsyslog
     else
         systemctl enable rsyslog.service
         systemctl start rsyslog.service
