--- a/tests/main/interfaces-network-observe/task.yaml
+++ b/tests/main/interfaces-network-observe/task.yaml
@@ -1,6 +1,7 @@
 summary: Ensure that the network-observe interface works
 
-systems: [-fedora-*, -opensuse-*]
+# ubuntu-14.04: systemd-run not supported
+systems: [-fedora-*, -opensuse-*, -ubuntu-14.04*]
 
 details: |
     The network-observe interface allows a snap to query the network status information.
