--- a/tests/main/revert/task.yaml
+++ b/tests/main/revert/task.yaml
@@ -1,5 +1,8 @@
 summary: Check that revert works.
 
+# ubuntu-14.04: systemd-run not supported
+systems: [-ubuntu-14.04*]
+
 environment:
     STORE_TYPE/fake: fake
     STORE_TYPE/remote: ${REMOTE_STORE}
