--- a/tests/core/snap-set-core-config/task.yaml
+++ b/tests/core/snap-set-core-config/task.yaml
@@ -10,8 +10,11 @@ prepare: |
     if [ $rc = 4 ]; then
         # systemctl(1) exit code 4: no such unit
 
+        #shellcheck source=tests/lib/systemd.sh
+        . "$TESTSLIB"/systemd.sh
+
         # start fake rsyslog service
-        systemd-run --unit rsyslog /bin/sleep 2h
+        systemd_create_and_start_unit rsyslog "/bin/sleep 2h"
 
         # create a flag to indicate the ryslog service is fake
         touch rsyslog.fake
@@ -19,7 +22,9 @@ prepare: |
 
 restore: |
     if [ -f rsyslog.fake ]; then
-        systemctl stop rsyslog
+        #shellcheck source=tests/lib/systemd.sh
+        . "$TESTSLIB"/systemd.sh
+        systemd_stop_and_destroy_unit rsyslog
     else
         systemctl enable rsyslog.service
         systemctl start rsyslog.service
