--- a/tests/core/failover/task.yaml
+++ b/tests/core/failover/task.yaml
@@ -34,16 +34,11 @@ restore: |
     rm -rf "$BUILD_DIR"
 
     # FIXME: remove the unset when we reset properly snap_try_{core,kernel} on rollback
-    #shellcheck source=tests/lib/boot.sh
-    . "$TESTSLIB"/boot.sh
-    bootenv_unset snap_try_core
-    bootenv_unset snap_try_kernel
+    "$TESTSTOOLS"/boot-state bootenv unset snap_try_core
+    "$TESTSTOOLS"/boot-state bootenv unset snap_try_kernel
 
 debug: |
-    #shellcheck source=tests/lib/boot.sh
-    . "$TESTSLIB"/boot.sh
-    #shellcheck disable=SC2119
-    bootenv
+    "$TESTSTOOLS"/boot-state bootenv show
     snap list
     snap changes
 
@@ -66,8 +61,6 @@ execute: |
 
     #shellcheck source=tests/lib/names.sh
     . "$TESTSLIB"/names.sh
-    #shellcheck source=tests/lib/boot.sh
-    . "$TESTSLIB"/boot.sh
     #shellcheck source=tests/lib/snaps.sh
     . "$TESTSLIB"/snaps.sh
 
@@ -115,8 +108,8 @@ execute: |
 
         # check boot env vars
         readlink /snap/core/current > failBoot
-        test "$(bootenv snap_"${TARGET_SNAP}")" = "${TARGET_SNAP_NAME}_$(cat prevBoot).snap"
-        test "$(bootenv snap_try_"${TARGET_SNAP}")" = "${TARGET_SNAP_NAME}_$(cat failBoot).snap"
+        test "$("$TESTSTOOLS"/boot-state bootenv show snap_"${TARGET_SNAP}")" = "${TARGET_SNAP_NAME}_$(cat prevBoot).snap"
+        test "$("$TESTSTOOLS"/boot-state bootenv show snap_try_"${TARGET_SNAP}")" = "${TARGET_SNAP_NAME}_$(cat failBoot).snap"
 
         REBOOT
     fi
@@ -137,10 +130,10 @@ execute: |
 
     # and the boot env vars are correctly set
     echo "Waiting for snapd to clean snap_mode"
-    while [ "$(bootenv snap_mode)" != "" ]; do
+    while [ "$("$TESTSTOOLS"/boot-state bootenv show snap_mode)" != "" ]; do
         sleep 1
     done
 
-    test "$(bootenv snap_"${TARGET_SNAP}")" = "${TARGET_SNAP_NAME}_$(cat prevBoot).snap"
+    test "$("$TESTSTOOLS"/boot-state bootenv show snap_"${TARGET_SNAP}")" = "${TARGET_SNAP_NAME}_$(cat prevBoot).snap"
     # FIXME: reenable the last check when we reset properly snap_try_{core,kernel} on rollback
-    # test "$(bootenv snap_try_${TARGET_SNAP})" = ""
+    # test "$("$TESTSTOOLS"/boot-state bootenv show snap_try_${TARGET_SNAP})" = ""
