--- a/tests/main/core-snap-refresh/task.yaml
+++ b/tests/main/core-snap-refresh/task.yaml
@@ -8,9 +8,6 @@ details: |
 manual: true
 
 execute: |
-    #shellcheck source=tests/lib/boot.sh
-    . "$TESTSLIB"/boot.sh
-
     if [ "$SPREAD_REBOOT" = 0 ]; then
         # save current core revision
         snap list | awk "/^core / {print(\$3)}" > prevBoot
@@ -22,8 +19,8 @@ execute: |
         snap list | awk "/^core / {print(\$3)}" > nextBoot
 
         if os.query is-core; then
-            test "$(bootenv snap_core)" = "core_$(cat prevBoot).snap"
-            test "$(bootenv snap_try_core)" = "core_$(cat nextBoot).snap"
+            test "$("$TESTSTOOLS"/boot-state bootenv show snap_core)" = "core_$(cat prevBoot).snap"
+            test "$("$TESTSTOOLS"/boot-state bootenv show snap_try_core)" = "core_$(cat nextBoot).snap"
         fi
 
         # there are no errors in the changes list
@@ -34,13 +31,13 @@ execute: |
     # after upgrade
     # the boot env vars are correctly set
     echo "Waiting for snapd to clean snap_mode"
-    while [ "$(bootenv snap_mode)" != "" ]; do
+    while [ "$("$TESTSTOOLS"/boot-state bootenv show snap_mode)" != "" ]; do
         sleep 1
     done
 
     if os.query is-core; then
-        test "$(bootenv snap_core)" = "core_$(cat nextBoot).snap"
-        test "$(bootenv snap_try_core)" = ""
+        test "$("$TESTSTOOLS"/boot-state bootenv show snap_core)" = "core_$(cat nextBoot).snap"
+        test "$("$TESTSTOOLS"/boot-state bootenv show snap_try_core)" = ""
     fi
 
     # and there are no errors in the changes list
